--- a/src/styles/component-styles/Navbar.css
+++ b/src/styles/component-styles/Navbar.css
@@ -1,20 +1,19 @@
-:root {
-    --darkblue:#1D1CE5;
-}
 
-nav {
+.navbar-nav {
+    z-index: 10000;
     width:100vw;
-    height: 10%;
+    height: 12%;
 }
 
-ul {
+.navbar-ul {
+    gap: 1rem;
     margin: 0;
     padding: 1rem 1rem;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     list-style: none;
     background-color: var(--darkblue);
-    color: white;
+    color: var(--text);
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
