--- a/src/styles/page-styles/DashBoard.css
+++ b/src/styles/page-styles/DashBoard.css
@@ -1,7 +1,20 @@
 main {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     align-items: center;
-    justify-content: center;
+}
+
+.dashboard-container {
+    width: 80%;
+    height: 100%;
+    align-items: center;
+    justify-content: flex-start;
     flex-direction: column;
+}
+
+.dashboard-container h3 {
+    width: 100%;
+    padding: 0rem 1rem 1rem 1rem;
+    text-align: center;
+    border-bottom: 1px solid black;
 }
